# Marble

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DOCKER_README.md  Dockerfile  INSTALL.md
HElib/: .gitignore
HElib/src/: CMakeLists.txt
Marble/: CMakeLists.txt  M.h
cmake/Modules/: FindNTL.cmake
